--- a/index.html
+++ b/index.html
@@ -250,14 +250,24 @@
             <!-- Paneles laterales -->
             <div class="div3">
                 <div>
-                    <h5>Panel Lateral</h5>
-                    <p>Contenido adicional aquí</p>
+                    <h5>¿ Que es TypeScript ?</h5>
+                    <p>
+                        TypeScript es un lenguaje de programación desarrollado por Microsoft que extiende JavaScript añadiendo tipado estático y características orientadas a objetos. Su finalidad principal es facilitar el desarrollo de aplicaciones grandes y robustas, permitiendo detectar errores en tiempo de compilación y mejorar la mantenibilidad del código.
+                    </p>
                 </div>
             </div>
             <div class="div5">
                 <div>
                     <h5>Información</h5>
                     <p>Datos relevantes</p>
+                    <ul>
+                        <li>TypeScript es un superconjunto de JavaScript.</li>
+                        <li>Permite definir tipos de datos estáticos.</li>
+                        <li>Mejora la legibilidad y mantenibilidad del código.</li>
+                        <li>Compatible con todos los navegadores modernos.</li>
+                        <li>Soporta herramientas de desarrollo avanzadas como IntelliSense.</li>
+                        <li>Facilita la detección temprana de errores en el código.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -266,7 +276,21 @@
         <div class="div6">
             <div class="text-center">
                 <h5>Recursos Adicionales</h5>
-                <p>Enlaces útiles y documentación</p>
+                <p>Enlaces a las soluciones</p>
+                <br>
+                <ul>
+                    <li><a href="backEnd/solucion1.php">Enlace a la Solucion 1</a></li>
+                    <li><a href="backEnd/solucion2.php">Enlace a la Solucion 2</a></li>
+                    <li><a href="backEnd/solucion3.php">Enlace a la Solucion 3</a></li>
+                    <li><a href="backEnd/solucion4.php">Enlace a la Solucion 4</a></li>
+                    <li><a href="backEnd/solucion5.php">Enlace a la Solucion 5</a></li>
+                    <li><a href="backEnd/solucion6.php">Enlace a la Solucion 6</a></li>
+                    <li><a href="backEnd/solucion7.php">Enlace a la Solucion 7</a></li>
+                    <li><a href="backEnd/solucion8.php">Enlace a la Solucion 8</a></li>
+                    <li><a href="backEnd/solucion9.php">Enlace a la Solucion 9</a></li>
+                    <li><a href="backEnd/solucion10.php">Enlace a la Solucion 10</a></li>
+                </ul>
+
             </div>
         </div>
 
