damos por finalizada la actividad con Ts

--- a/index.html
+++ b/index.html
@@ -203,10 +203,7 @@
                                 <a class="nav-link active" aria-current="page" href="frontEnd/datos.html">Tipos de datos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="frontEnd/alias.html">Tipos de alias</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="frontEnd/funciones.html">Funciones</a>
+                                <a class="nav-link" href="frontEnd/alias.html">Tipos de alias y Funciones</a>
                             </li>
                         </ul>
                     </div>
